2004-12-16  Danny Smith  <dannysmith@users.sourceforge.net>

	PR target/18997
	* config/i386/cygwin.h (GTHREAD_USE_WEAK): Define to 0.

2004-12-16  Richard Henderson  <rth@redhat.com>
	    Aldy Hernandez  <aldyh@redhat.com>

	* simplify-rtx.c (simplify_replace_rtx): Do not blindly replace
	hard registers.

2004-12-16  H.J. Lu  <hongjiu.lu@intel.com>

	PR other/18508
	* config/alpha/t-osf4 (SHLIB_LINK): Use `.backup' as the suffix
	to back up the existing shared library.
	* config/arm/t-netbsd (SHLIB_LINK): Likewise.
	* config/mips/t-slibgcc-irix (SHLIB_LINK): Likewise.
	* config/pa/t-hpux-shlib (SHLIB_LINK): Likewise.
	* config/sh/t-linux (SHLIB_LINK): Likewise.
	* config/t-libunwind-elf (SHLIBUNWIND_LINK): Likewise.
	* config/t-slibgcc-darwin (SHLIB_LINK): Likewise.
	* config/t-slibgcc-elf-ver (SHLIB_LINK): Likewise.
	* config/t-slibgcc-sld (SHLIB_LINK): Likewise.

	* config/i386/t-nwld (SHLIB_LINK): Don't use the temporary
	file.

2004-12-16  Richard Henderson  <rth@redhat.com>

	* Makefile.in (MD_DEPS, s-mddeps): New.
	(s-config, s-conditions, s-flags, s-codes, s-constants, s-emit,
	s-recog, s-opinit, s-extract, s-peep, s-attr, s-attrtab, s-output,
	s-preds): Depend on MD_DEPS instead of md_file.
	(genobjnames): Add genmddeps.o
	(build/genmddeps, build/genmddeps.o): New.
	(mostlyclean): Remove mddeps.mk.
	* genmddeps.c: New file.
	* gensupport.c (include_callback): New.
	(process_include): Call it.
	* gensupport.h (include_callback): Declare.

2004-12-16  Nathan Sidwell  <nathan@codesourcery.com>

	* local-alloc.c (block_alloc): Replace IN_RANGE with simple
	comparison.

	* doc/c-tree.texi (CONSTRUCTOR): Mention RANGE_EXPRs.

2004-12-16  Mark Dettinger  <dettinge@de.ibm.com>

	* config/s390/s390.c (struct processor_costs): Two new fields:
	madbr, maebr.
	(s390_rtx_costs): Added handling of multipy and add in SFmode.
	More precise values for cost of multiply and add.

2004-12-15  Richard Henderson  <rth@redhat.com>

	PR target/19028